--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                 <h2 hidden>Our advantage</h2>
                 <ul class="advan_list">
                     <li class="advan_item">
+                        <div class="advan_item_perevagy">
+                            <svg class="advan_icon" width="64" hidden="64">
+                                <use href="./images/symbol-defs_1.svg#Strategy"></use>
+                            </svg>
+                        </div>
                         <h3 class="advan-header">Strategy</h3>
                         <p class="advan-text">
                             Our goal is to identify the business problem to walk away with the
@@ -64,6 +69,11 @@
 
                     </li>
                     <li class="advan_item">
+                        <div class="advan_item_perevagy">
+                            <svg class="advan_icon" width="64" hidden="64">
+                                <use href="./images/symbol-defs_1.svg#Punctuality"></use>
+                            </svg>
+                        </div>
                         <h3 class="advan-header">Punctuality</h3>
                         <p class="advan-text">
                             Bring the key message to the brand's audience for the best price
@@ -71,6 +81,11 @@
                         </p>
                     </li>
                     <li class="advan_item">
+                        <div class="advan_item_perevagy">
+                            <svg class="advan_icon" width="64" hidden="64">
+                                <use href="./images/symbol-defs_1.svg#Diligence"></use>
+                            </svg>
+                        </div>
                         <h3 class="advan-header">Deligence</h3>
                         <p class="advan-text">
                             Research and confirm brands that present the strongest digital
@@ -78,6 +93,11 @@
                         </p>
                     </li>
                     <li class="advan_item">
+                        <div class="advan_item_perevagy">
+                            <svg class="advan_icon" width="64" hidden="64">
+                                <use href="./images/symbol-defs_1.svg#Technologies"></use>
+                            </svg>
+                        </div>
                         <h3 class="advan-header">Technologies</h3>
                         <p class="advan-text">
                             Design practice focused on digital experiences. We bring forth a
@@ -120,6 +140,40 @@
                             <h3 class="team_header_person">Mark Guerrero</h3>
                             <p class="team_text">Product Designer</p>
                         </div>
+                        <ul class="team_socials">
+                            <li class="team_social">
+                                <a class="team_link" href="">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#instagram">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#twitter">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#facebook">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#linkedin">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team_list">
                         <img src="./static/img/Team_2.jpg" alt="Foto Tom" width="264">
@@ -127,6 +181,40 @@
                             <h3 class="team_header_person">Tom Ford</h3>
                             <p class="team_text">Frontend Developer</p>
                         </div>
+                        <ul class="team_socials">
+                            <li class="team_social">
+                                <a class="team_link" href="">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#instagram">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#twitter">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#facebook">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#linkedin">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team_list">
                         <img src="./static/img/Team_3.jpg" alt="Foto Camila" width="264">
@@ -134,6 +222,40 @@
                             <h3 class="team_header_person">Camila Garcia</h3>
                             <p class="team_text">Marketing</p>
                         </div>
+                        <ul class="team_socials">
+                            <li class="team_social">
+                                <a class="team_link" href="">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#instagram">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#twitter">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#facebook">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#linkedin">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team_list">
                         <img src="./static/img/Team_4.jpg" alt="Foto Daniel" width="264">
@@ -141,6 +263,40 @@
                             <h3 class="team_header_person">Daniel Wilson</h3>
                             <p class="team_text">UI Designer</p>
                         </div>
+                        <ul class="team_socials">
+                            <li class="team_social">
+                                <a class="team_link" href="">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#instagram">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#twitter">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#facebook">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team_social">
+                                <a class="team_link">
+                                    <svg class="icon_team_social" width="16" height="16">
+                                        <use href="./images/symbol-defs_1.svg#linkedin">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -149,45 +305,103 @@
 
         <section class="sections customers">
             <div class="container">
-                <h2 class="section_title">Customers</h2>
-                <ul class="clients-list">
-                    <li class="client" width="168" height="88">
-                        <a href class="client-page"></a>
-                        <svg class="client-icon" width="168" height="88">
-                            <use href="./images/symbol-defs_1.svg#Logo_1"></use>
-                        </svg>
+                <h2 class="clients_title">Customers</h2>
+                <ul class="clients_list">
+                    <li class="clients_item" width="104" height="56">
+                        <a class="clients_link" href="">
+                            <svg class="clients-icon" width="104" height="56">
+                                <use href="./images/symbol-defs_1.svg#Logo_1"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="client" width="168" height="88"> </li>
-                    <li class="client" width="168" height="88"> </li>
-                    <li class="client" width="168" height="88"> </li>
-                    <li class="client" width="168" height="88"> </li>
-                    <li class="client" width="168" height="88"> </li>
+                    <li class="clients_item" width="104" height="56">
+                        <a href class="clients_link">
+                            <svg class="clients_icon" width="104" height="56">
+                                <use href="./images/symbol-defs_1.svg#Logo_3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients_item" width="104" height="56">
+                        <a href class="clients_link">
+                            <svg class="clients_icon" width="104" height="56">
+                                <use href="./images/symbol-defs_1.svg#Logo_5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients_item" width="104" height="45">
+                        <a href class="clients_link">
+                            <svg class="clients_icon" width="104" height="56">
+                                <use href="./images/symbol-defs_1.svg#Logo_7"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients_item" width="104" height="56">
+                        <a href class="clients_link">
+                            <svg class="clients_icon" width="104" height="56">
+                                <use href="./images/symbol-defs_1.svg#Logo_9"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients_item" width="104" height="56">
+                        <a href class="clients_link">
+                            <svg class="clients_icon" width="104" height="56">
+                                <use href="./images/symbol-defs_1.svg#Logo_11"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <div class="container footer">
-            <div class="footer_left">
-                <a class="footer_logo" href="">WEB<span>STUDIO</span></a>
-                <p class="logo_text">
-                    Increase the flow of customers and sales for your business with
-                    digital marketing & growth solutions.
-                </p>
-            </div>
-            <div class="footer_right">
-                <p>Social Media</p>
-                <ul>
-                    <li>
-                        <a href="">
-                            <svg>
-                                <use width="20" height="20" href="./images/symbol-defs_1.svg#instagram" fill="white"></use>
-                            </svg>
-                        </a>
-                        <div class="footer_invisible">‎ </div>
-                    </li>
-                </ul>
+        <div class="containter_foot">
+            <div class="container footer">
+                <div class="footer_left">
+                    <a class="footer_logo" href="">WEB<span>STUDIO</span></a>
+                    <p class="logo_text">
+                        Increase the flow of customers and sales for your business with
+                        digital marketing & growth solutions.
+                    </p>
+                </div>
+                <div class="footer_right">
+                    <h3 class="footer_media">Social Media</h3>
+                    <ul class="footer_social_list">
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#instagram">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#twitter">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#facebook">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#linkedin">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
