--- a/portfolio.html
+++ b/portfolio.html
@@ -154,16 +154,57 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <a class="footer_logo" href="">WEB<span>STUDIO</span></a>
-            <p class="logo_text">
-                Increase the flow of customers and sales for your business with
-                digital marketing & growth solutions.
-            </p>
+    <footer>
+        <div class="containter_foot">
+            <div class="container footer">
+                <div class="footer_left">
+                    <a class="footer_logo" href="">WEB<span>STUDIO</span></a>
+                    <p class="logo_text">
+                        Increase the flow of customers and sales for your business with
+                        digital marketing & growth solutions.
+                    </p>
+                </div>
+                <div class="footer_right">
+                    <h3 class="footer_media">Social Media</h3>
+                    <ul class="footer_social_list">
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#instagram">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#twitter">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#facebook">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer_socil_item">
+                            <a class="footer_link_back" href="">
+                                <svg class="footer_link_sign" width="16" height="16">
+                                    <use href="./images/symbol-defs_1.svg#linkedin">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
-    <!-- /Footer -->
+    <!-- /Footer-->
 </body>
 
 </html>
