--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 
                 <ul class="section_row_works">
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/BankApp.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
@@ -65,9 +65,10 @@
                                 <p class="section_row_text">App</p>
                             </div>
                         </a>
+
                     </li>
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/QR.jpg" alt="Картинка Bank App" width="360" height="300">
                             <div class="section_row_item_text">
                                 <h2 class="section_row_header">Cashless Payment</h2>
@@ -76,7 +77,7 @@
                         </a>
                     </li>
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/Monitor.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
@@ -87,7 +88,7 @@
                     </li>
 
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/taxiservice.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
@@ -97,7 +98,7 @@
                         </a>
                     </li>
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/screen.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
@@ -107,7 +108,7 @@
                         </a>
                     </li>
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/online.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
@@ -118,7 +119,7 @@
                     </li>
 
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/InstaStories.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
@@ -128,7 +129,7 @@
                         </a>
                     </li>
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/OraganicFood.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
@@ -138,7 +139,7 @@
                         </a>
                     </li>
                     <li class="section_row_item">
-                        <a href="#">
+                        <a class="row_item" href="#">
                             <img src="./static-portfolio/img/Coffee.jpg" alt="Картинка Bank App" width="360"
                                 height="300">
                             <div class="section_row_item_text">
